# PolicyPay

./: .gitignore  README.md  img-be44fb31-2104-4521-8fc0-5d2f99bff39a  md.md
backend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/idl/: README.md  policypay.json
backend/src/: config.ts  db.ts  index.ts
backend/src/integrations/: amina.ts  errors.ts  fireblocks.ts  http.ts  keyrock.ts  orchestrator.ts  sixMtlClient.ts  solstice.ts  types.ts
backend/src/middleware/: apiKey.ts
backend/src/models/: AuditLog.ts  Decision.ts  Institution.ts  KytRecord.ts  Policy.ts
backend/src/routes/: audit.ts  demo.ts  payments.ts  policies.ts
backend/src/scripts/: seedLocal.ts
backend/src/services/: auditLogger.ts  chainAudit.ts  compliance.ts  kyt.ts  localSeed.ts  paymentErrors.ts  policyParams.ts  solana.ts
backend/src/validation/: schemas.ts
contracts/: Anchor.toml  package.json  pnpm-lock.yaml
contracts/programs/policypay/: Cargo.toml
contracts/programs/policypay/src/: lib.rs
contracts/tests/: policypay.ts
docs/: brainstorm.md  devnet-runbook.md  dorahacks.md  todo.md  wire-format.md
frontend/: .env.example  index.html  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: Layout.tsx  Sidebar.css  Sidebar.tsx  TopBar.css  TopBar.tsx
frontend/src/lib/: format.ts  referenceData.ts
frontend/src/pages/: AuditTrail.css  AuditTrail.tsx  Dashboard.css  Dashboard.tsx  Payments.css  Payments.tsx  Policies.css  Policies.tsx
